<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#eee33e"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="5dp">

    <TextView
        android:id="@+id/tv_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:text="item"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_item_append"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_toEndOf="@+id/tv_item"
        android:layout_toRightOf="@+id/tv_item"
        android:text="1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp" />

    <Switch
        android:id="@+id/cb_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_gravity="end" />
</RelativeLayout>